[project]
name = "sunny-tea-review"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.137.2",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "backend/main.py:app"

[tool.vercel.scripts]
build = "cd frontend && npm run build"
